<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.add_story.AddStoryFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/button_add_container"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_story_holder"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_304dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:background="@drawable/bg_dash"
                android:clickable="true"
                android:focusable="true"
                android:padding="16dp"
                android:src="@drawable/ic_add_photo"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/add_story_description"
                android:textSize="@dimen/font_medium" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="@dimen/dimen_8dp"
                app:boxCornerRadiusBottomStart="@dimen/dimen_8dp"
                app:boxCornerRadiusTopEnd="@dimen/dimen_8dp"
                app:boxCornerRadiusTopStart="@dimen/dimen_8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_add_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:maxLines="5"
                    android:minLines="5" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_share_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen_8dp"
                android:checked="false"
                android:text="@string/share_with_location" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map_container"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_176dp"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/button_add_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/mainBackgroundColor"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dimen_16dp"
        android:paddingVertical="@dimen/dimen_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add"
            style="@style/Theme.StoryNote.FilledButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/dimen_8dp"
            android:text="@string/add_story"
            android:textAllCaps="false" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>